Creating IntakeController
